# Processed by automake

AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = server
server_SOURCES = \
account.cpp act.comm.cpp act.informative.cpp act.movement.cpp \
act.offensive.cpp act.other.cpp arena.cpp clan.cpp commands.cpp comm.cpp \
commerce.cpp constants.cpp control.cpp crafts.cpp create_mobile.cpp \
creation.cpp db.cpp destruction.cpp dwellings.cpp edit.cpp employment.cpp \
fight.cpp group.cpp guest.cpp guides.cpp handler.cpp hash.cpp item_card.cpp \
item_tossable.cpp limits.cpp magic.cpp mobact.cpp mobprogs.cpp mysql.cpp \
nanny.cpp net_link.cpp object_damage.cpp objects.cpp olc.cpp perception.cpp \
psionics.cpp roles.cpp roomprogs.cpp save.cpp somatics.cpp staff.cpp \
transformation.cpp utility.cpp weather.cpp wounds.cpp

